Button to switch DONE

--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,10 @@ svg {
 }
 
 button {
+  position: absolute;
+  top: 150px;
+  left: 10px;
   width: 100px;
   border: 1px solid black;
   margin: 0 auto 5px;
 }
-
