--- a/src/TreeChart/OrganizationTree.module.css
+++ b/src/TreeChart/OrganizationTree.module.css
@@ -1,11 +1,12 @@
 .root2 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  position: absolute;
+  align-self: flex-end;
   align-items: stretch;
-  align-content: center;
   justify-content: center;
   height: 100vh;
-  padding: 420px 50px;
+  padding: 300px 50px;
   text-align: center;
   box-sizing: border-box;
 }
